# simple_chat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: doc.md  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
simple_chat/: settings.py  urls.py
